[KYN-33] Adding localhost to CORS policy